objects/JBCXM__Widgets__c.object
<CustomObject>
    <fields>
        <fullName>JBCXM__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JBCXM__Metadata__c</fullName>
        <label>Metadata</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>JBCXM__QueryOption__c</fullName>
        <label>QueryOption</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>JBCXM__SystemName__c</fullName>
        <label>SystemName</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JBCXM__Title__c</fullName>
        <label>Title</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Widgets</label>
    <nameField>
        <label>Type</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Widgets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>